<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Android页面标题 -->
    <string name="appName">巡检通</string>
    <string name="LoginActivityTitle">巡检通</string>
    <string name="LxListActivityTitle">路线列表</string>
    <string name="XmjbxxListActivityTitle">建设检查</string>
    <string name="LSListActivityTitle">路损列表</string>
    <string name="ZljcYsdActivityTitle">质量检测-压实度</string>
    <string name="ZljcWccsActivityTitle">质量检测-弯沉测试</string>
    <string name="ZlxcActivityTitle">质量巡查</string>
    <string name="ZlxcRespActivityTitle">质量巡查反馈</string>
    <string name="TaskListActivityTitle">任务中心</string>
    <string name="LSActivityTitle">路损信息录入</string>
    <string name="LSViewActivityTitle">路损明细</string>
    <string name="SettingActivityTitle">设置</string>
    <string name="AboutActivityTitle">关于</string>
    <string name="LzXcjlActivityTitle">巡查新增</string>
    <string name="LzXcjlListActivityTitle">巡查列表</string>
    <string name="LzXcjlViewActivityTitle">巡查明细</string>
    <string name="SelXmjbxxListActivityTitle">项目选择</string>
    <string name="QljclbListViewtitle">所在地名</string>
    <!-- 登陆 -->
    <string name="hint_username">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_login_savepwd">记住密码</string>
    <string name="txt_login_savename">记住帐号</string>
    <string name="txt_login_name">帐  号：</string>
    <string name="txt_login_pwd">密  码：</string>
   
    <!-- 服务器地址设置 -->
    <string name="port">端口号</string>
    <string name="ipset">IP地址</string>
    <string name="setremind">请输入后台服务的IP地址及端口号</string>
    
    <!-- 关于 -->
    <string name="txt_appname">名称：</string>
    <string name="txt_version">版本：</string>
    <string name="txt_copyright">版权：</string>
    <string name="txt_scope">适用：</string>
    <string name="txt_esn">IMEI：</string>
    <string name="txt_imsi">IMSI：</string>
    <string name="txt_company">交通运输部科学研究院交通信息中心</string>
    
    
    <!-- 建设项目-->
    <string name="hint_jhnf">计划年份</string>
    <string name="hint_xmlx">项目类型</string>
    <string name="hint_xzqh">行政区划</string>
    <string name="hint_xmmc">项目名称</string>
    
    <!--养护路损  录入 -->
    <string name="lab_szdm">所在地名</string>
    <string name="lab_shlx">水毁路线</string>
    <string name="lab_qzzh">起止桩号</string>
    <string name="lab_fxsj">发现时间</string>
    <string name="lab_xcqk">现场情况</string>
    <string name="lab_czcs">处置措施</string>
    <string name="lab_tpxx">图片信息</string>
    <string name="lab_searchdate">请选择日期</string>
    <string name="lab_searchtime">请选择时间</string>
    <string name="save">保存</string>
    <string name="lab_photoalbum">相册</string>
    <string name="lab_cancel">取消</string>
    <string name="lab_complete">完成</string>
    
    <!-- 养护路损  列表 -->
    <string name="hint_szdm">所在地名</string>
    <string name="hint_lxbm">路线编码</string>
    <string name="hint_lxmc">路线名称</string>
    
    <!-- 路政巡查 新增 -->
	<string name="lzxc_lxmc">路线名称</string>
	<string name="lzxc_lxbm">路线编码</string>
	<string name="lzxc_kssj">开始时间</string>
	<string name="lzxc_jssj">结束时间</string>
	<string name="lzxc_fzr">负责人</string>
	<string name="lzxc_jlr">记录人</string>
	<string name="lzxc_xcry">巡查人员</string>
	<string name="lzxc_weather">天气</string>
	<string name="lzxc_fxwt">发现问题</string>
	<string name="lzxc_clyj">处理意见</string>
	<string name="lzxc_cljg">处理结果</string>
	
	    <!-- 养护巡查 新增 -->
	<string name="yhxc_lxmc">路线名称</string>
	<string name="yhxc_lxbm">路线编码</string>
	<string name="yhxc_kssj">开始时间</string>
	<string name="yhxc_jssj">结束时间</string>
	<string name="yhxc_fzr">负责人</string>
	<string name="yhxc_jlr">记录人</string>
	<string name="yhxc_xcry">巡查人员</string>
	<string name="yhxc_weather">天气</string>
	<string name="yhxc_fxwt">发现问题</string>
	<string name="yhxc_clyj">处理意见</string>
	<string name="yhxc_cljg">处理结果</string>
	
	
    <!-- 质量检测-压实度 -->
    <string name="lab_jsxm">建设项目</string>
    <string name="lab_jcld">检测路段</string>
    <string name="lab_qywz">取样位置</string>
    <string name="lab_sksd">试坑深度(cm)</string>
    <string name="lab_gstYylsz">灌砂桶+原有量砂重(g)</string>
    <string name="lab_ztjccmhsz">锥体及粗糙耗砂重(g)</string>
    <string name="lab_gstSylsz">灌砂筒+剩余量砂重(g)</string>
    <string name="lab_skhsz">试坑耗砂重(g)</string>
    <string name="lab_lsmd">量砂密度(g/cm3)</string>
    <string name="lab_skrj">试坑容积(cm3)</string>
    <string name="lab_ssyz">湿试样重(g)</string>
    <string name="lab_sysmd">试样湿密度(g/cm3)</string>
    <string name="lab_hh">盒号</string>
    <string name="lab_hz">盒重(g)</string>
    <string name="lab_hzSsyz">盒重+湿试样重(g)</string>
    <string name="lab_hzGsyz">盒重+干试样重(g)</string>
    <string name="lab_sz">水重(g)</string>
    <string name="lab_gsyz">干试样重(g)</string>
    <string name="lab_syhsl">试样含水量(%)</string>
    <string name="lab_pjhsl">平均含水量(%)</string>
    <string name="lab_zjhsl">最佳含水量(%)</string>
    <string name="lab_sygmd">试样干密度(g/cm3)</string>
    <string name="lab_zdgmd">最大干密度(g/cm3)</string>
    <string name="lab_ysd">压实度(%)</string>
    
    <!-- 质量巡查列表 -->
    <string name="ZlxcListActivityTitle">质量巡查列表</string>
    <!-- 桥梁检测列表 -->
    <string name="QljcListActivityTitle">质量巡查列表</string>
    <!-- 质量巡查 -->
    <string name="lab_xcsj">巡查时间</string>
    <string name="lab_xcdw">巡查单位</string>
    <string name="lab_xcr">巡查人</string>
    <string name="lab_xcjg">巡查结果</string>
    <string name="lab_zgyj">整改意见</string>
    <string name="lab_xctp">巡查图片</string>
    
    <!-- 质量巡查反馈 -->
    <string name="lab_fksj">反馈时间</string>
    <string name="lab_fkdw">反馈单位</string>
    <string name="lab_fkr">反馈人</string>
    <string name="lab_fkqk">反馈情况</string>
    <string name="lab_fktp">反馈图片</string>
    
    <!-- common -->
    <string name="lab_xmmc">项目名称</string>
    
    
    <!-- Common -->
    <string name="basemap_url">http://ags1.catsic.com:8399/arcgis/rest/services/43_BaseMap/MapServer</string>
 	<string name="operationallayer_url">http://ags1.catsic.com:8399/arcgis/rest/services/43_2012_nb_new/MapServer</string>
    
    <string name="btn_text_query">查询</string>
    <string name="btn_text_cancel">取消</string>
    <string name="btn_text_reset">重置</string>
    <string name="tv_text_norecord">无记录</string>
    
    <string name="app_name">巡检通</string>
    <string name="loading">正在努力加载中...</string>
    <string name="handing">正在处理,请稍后...</string>
    
    <string name="action_add">添加</string>
    <string name="action_del">删除</string>
    <string name="action_query">查询</string>
    <string name="action_cancel">清空</string>
    <string name="action_setting">设置</string>
    <string name="action_about">关于</string>
    <string name="action_apkUpdate">升级</string>
    <string name="action_exit">退出</string>
    
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="inspectPart">检测部位</string>
    <string name="qslx">缺损类型</string>
    <string name="qsfw">缺损范围</string>
    <string name="byyj">保养意见</string>


</resources>
