<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.catsic.epatrol.MainActivity" >

    <item
        android:id="@+id/action_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_setting"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_about"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_apkUpdate"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_apkUpdate"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_exit"
        android:showAsAction="withText"/>

</menu>
