<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.catsic.epatrol.MainActivity" >
	 <item
        android:id="@+id/action_query"
        android:icon="@color/icon_common_query_selector"
         android:title="@string/action_query"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
         android:title="@string/action_add"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_del"
        android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/action_del"
        android:showAsAction="ifRoom"/>

</menu>
