<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >
	   <LinearLayout
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content" 
	        	android:orientation="vertical" 
	            >
             <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_lxmc" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_lxmc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50dip" android:layout_weight="1.0" style="@style/gray_normal_18" />
	         </LinearLayout>
             <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_kssj" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_kssj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="1.0" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_jssj" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_jssj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" android:layout_weight="1.0" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_fzr" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_fzr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_jlr" style="@style/black_normal_18"/>
	            <TextView android:id="@+id/yh_jlr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_xcry" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_xcry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" style="@style/gray_normal_18"/>
	         </LinearLayout>
	          <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_weather" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_weather" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" style="@style/gray_normal_18"/>
	         </LinearLayout>
	          <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_fxwt" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_fxwt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" android:lines="3" style="@style/gray_normal_18"/>
	         </LinearLayout>
	          <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_clyj" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_clyj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" android:lines="3" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yhxc_cljg" style="@style/black_normal_18" />
	            <TextView android:id="@+id/yh_cljg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="50.0dip" android:lines="3" style="@style/gray_normal_18"/>
	         </LinearLayout>
	         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
	            <TextView android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/lab_tpxx" style="@style/black_normal_18" />
	            <GridView 
			        android:id="@+id/gv_images"
			        android:layout_width="230dp"
			        android:layout_height="230dp"
			        android:layout_marginLeft="5dp"
			        android:horizontalSpacing="3dp"        
			        android:numColumns="3"
			        android:scrollbars="none"
			        android:verticalSpacing="5dp">
			    </GridView>
	         </LinearLayout>
	   </LinearLayout>
</ScrollView>
