<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fatext="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_jsjc_xmjbxx_list_query"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <include 
            android:id="@+id/sp_xzqh" 
            layout="@layout/common_xzqhcascade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="30dip"
            />

        <EditText
            android:id="@+id/et_szdm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="30dip"
            android:hint="@string/hint_szdm" />
        
        <EditText
            android:id="@+id/et_lxbm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="30dip"
            android:hint="@string/hint_lxbm" />
        
        <EditText
            android:id="@+id/et_lxmc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="30dip"
            android:hint="@string/hint_lxmc" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" 
        android:layout_marginTop="20dp"
        >
        
       <!-- 按钮圆角 bbutton:roundedCorners="true" -->
       <com.beardedhen.bbutton.BootstrapButton
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_query"
            bbutton:bootstrapBrand="success"
            android:layout_margin="10dp"
            />
       
       <com.beardedhen.bbutton.BootstrapButton
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_reset"
            bbutton:bootstrapBrand="success"
            android:layout_margin="10dp"
            />
       
    </LinearLayout>
    </LinearLayout>
</ScrollView>